[package]
name = "backerror"
version = "0.1.0"
edition = "2021"

[dependencies]
backerror-macros = { path = "../backerror-macros" }


[dev-dependencies]
thiserror = "2"

[features]
default = ["force_backtrace", "release_off"]

# only if environment variable RUST_BACKTRACE or RUST_LIB_BACKTRACE is set
backtrace = []

# force backtrace even if environment variable is not set
force_backtrace = []

# turn off attribute macro in release mode
release_off = ["backerror-macros/release_off"]
